Code: Fix SonarQube and IntelliJ issues.