@@ -17,12 +17,11 @@
 package org.jarhc.it;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import org.jarhc.TestUtils;
@@ -82,7 +81,7 @@ class FieldRefAnalyzerTest {
 		// prepare
 		File jarFile1 = TestUtils.getResourceAsFile("/org/jarhc/it/FieldRefAnalyzerTest/a.jar", tempDir);
 		File jarFile2 = TestUtils.getResourceAsFile("/org/jarhc/it/FieldRefAnalyzerTest/b-1.jar", tempDir);
-		Classpath classpath = classpathLoader.load(Arrays.asList(jarFile1, jarFile2));
+		Classpath classpath = classpathLoader.load(List.of(jarFile1, jarFile2));
 
 		// test
 		ReportSection section = analyzer.analyze(classpath);
@@ -91,7 +90,7 @@ class FieldRefAnalyzerTest {
 		List<Object> content = section.getContent();
 		assertEquals(1, content.size());
 		Object object = content.get(0);
-		assertTrue(object instanceof ReportTable);
+		assertInstanceOf(ReportTable.class, object);
 		ReportTable table = (ReportTable) object;
 		List<String[]> rows = table.getRows();
 		assertEquals(0, rows.size());
@@ -104,7 +103,7 @@ class FieldRefAnalyzerTest {
 		// prepare
 		File jarFile1 = TestUtils.getResourceAsFile("/org/jarhc/it/FieldRefAnalyzerTest/a.jar", tempDir);
 		File jarFile2 = TestUtils.getResourceAsFile("/org/jarhc/it/FieldRefAnalyzerTest/b-2.jar", tempDir);
-		Classpath classpath = classpathLoader.load(Arrays.asList(jarFile1, jarFile2));
+		Classpath classpath = classpathLoader.load(List.of(jarFile1, jarFile2));
 
 		// test
 		ReportSection section = analyzer.analyze(classpath);
@@ -113,7 +112,7 @@ class FieldRefAnalyzerTest {
 		List<Object> content = section.getContent();
 		assertEquals(1, content.size());
 		Object object = content.get(0);
-		assertTrue(object instanceof ReportTable);
+		assertInstanceOf(ReportTable.class, object);
 		ReportTable table = (ReportTable) object;
 		List<String[]> rows = table.getRows();
 		assertEquals(1, rows.size());
@@ -146,7 +145,7 @@ class FieldRefAnalyzerTest {
 		List<Object> content = section.getContent();
 		assertEquals(1, content.size());
 		Object object = content.get(0);
-		assertTrue(object instanceof ReportTable);
+		assertInstanceOf(ReportTable.class, object);
 		ReportTable table = (ReportTable) object;
 		List<String[]> rows = table.getRows();
 		assertEquals(1, rows.size());
@@ -181,7 +180,7 @@ class FieldRefAnalyzerTest {
 		List<Object> content = section.getContent();
 		assertEquals(1, content.size());
 		Object object = content.get(0);
-		assertTrue(object instanceof ReportTable);
+		assertInstanceOf(ReportTable.class, object);
 		ReportTable table = (ReportTable) object;
 		List<String[]> rows = table.getRows();
 		assertEquals(1, rows.size());
