@@ -21,7 +21,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import org.jarhc.utils.ByteBuffer;
 import org.junit.jupiter.api.Test;
@@ -44,7 +43,7 @@ class ZipFileArchiveTest {
 
 			assertEquals("b2de6f7c6eff51a28729be9c4f6555354f16a1ca", archive.getFileChecksum());
 			assertEquals(678, archive.getFileSize());
-			assertEquals(Arrays.asList("META-INF/MANIFEST.MF : 61", "a/A.class : 178"), files);
+			assertEquals(List.of("META-INF/MANIFEST.MF : 61", "a/A.class : 178"), files);
 		}
 	}
 
