@@ -22,7 +22,6 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import org.jarhc.utils.ByteBuffer;
 import org.junit.jupiter.api.Test;
@@ -45,7 +44,7 @@ class ZipStreamArchiveTest {
 
 			assertEquals("b2de6f7c6eff51a28729be9c4f6555354f16a1ca", archive.getFileChecksum());
 			assertEquals(678, archive.getFileSize());
-			assertEquals(Arrays.asList("META-INF/MANIFEST.MF : 61", "a/A.class : 178"), files);
+			assertEquals(List.of("META-INF/MANIFEST.MF : 61", "a/A.class : 178"), files);
 		}
 	}
 
